fix prod issue with score panel covering logo

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
   aspect-ratio: 1/3;
   object-fit: contain;
  max-height: 120px;
-  
   margin: 0 auto;
   position: absolute;
   top: -4px;
@@ -44,6 +43,7 @@ body {
   box-shadow: 0 3px 15px rgba(58, 58, 60, 0.7);
   z-index: 1; /* Ensure it's above the cards */
   border: 1px solid #030303;
+  margin-top: 140px;
 }
 
 .restart {
@@ -59,15 +59,10 @@ body {
   color: #fff;
 }
 
-/* .wrapper {
-  height: 400px;
-  width: 400px;
-  padding: 10px 15px;
- 
-  background: #f8f8f8;
-  border-radius: 10px;
+.wrapper {
+  margin-top: 130px;
 
-} */
+}
 
 /* .cards, .card, .view {
   display: flex;
